--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *,
 body {
-    font-family: 'Lexend Deca', sans-serif;
+    font-family: "Lexend Deca", sans-serif;
     box-sizing: border-box;
     color: var(--board-color);
     margin: 0;
